--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -135,5 +135,5 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
 
 bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "Copied tmux buffer to system clipboard"
 
-bind-key -r F new-window t
-bind-key -r D run-shell "t ~/dotfiles"
+bind-key -r F new-window tmux-sessionizer
+bind-key -r D run-shell "tmux-sessionizer ~/dotfiles"
