refactor: disable transparency on kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,8 +8,8 @@ adjust_line_height 125%
 
 cursor_blink_interval 0
 enable_audio_bell 0
-background_opacity 0.975
-# hide_window_decorations yes
+# background_opacity 0.975
+hide_window_decorations yes
 window_padding_width 10
 
 
