--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,8 @@ bold_font Jetbrains Mono Bold Nerd Font Complete
 italic_font JetBrains Mono Italic Nerd Font Complete
 bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
 
+shell_integration no-cursor
+
 font_size 12
 adjust_line_height 125%
 
