--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,13 @@
-font_family JetBrains Mono Regular Nerd Font Complete
-bold_font Jetbrains Mono Bold Nerd Font Complete
-italic_font JetBrains Mono Italic Nerd Font Complete
-bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
+font_family JetBrains Mono Bold Nerd Font Complete
+bold_font Jetbrains Mono ExtraBold Nerd Font Complete
+italic_font JetBrains Mono Bold Italic Nerd Font Complete
+bold_italic_font JetBrains Mono ExtraBold Italic Nerd Font Complete
 
 shell_integration no-cursor
 
 font_size 12
-adjust_line_height 125%
+modify_font cell_height 150%
+copy_on_select yes
 
 cursor_blink_interval 0
 enable_audio_bell 0
