--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -135,5 +135,25 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
 
 bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "Copied tmux buffer to system clipboard"
 
-bind-key -r F new-window tmux-sessionizer
+# Display in a fzf pop up the active sessions.
+bind C-j display-popup -E tmux-windowizer
+###### INLINE SCRIPT ######
+# bind C-j new-window -n "session-switcher" "\
+#     tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+#     sed '/^$/d' |\
+#     fzf --reverse --header jump-to-session --preview 'tmux capture-pane -pt {}'  |\
+#     xargs tmux switch-client -t"
+
+# bind C-j display-popup -E "\
+#     tmux list-sessions -F '#{?session_attached,,#{session_name}' |\
+#     sed '/^$/d' |\
+#     fzf --reverse --header jump-to-session --preview 'tmux capture-pane -pt {}'  |\
+#     xargs tmux switch-client -t"
+###### INLINE SCRIPT ######
+
+# Show new window with personalized name available projects.
+# bind-key -r F new-window -n "session-switcher" tmux-sessionizer
+
+# Use the new display popup to show the sessionizer with the available projects.
+bind-key -r F display-popup -E tmux-sessionizer
 bind-key -r D run-shell "tmux-sessionizer ~/dotfiles"
