feat: set transparent bg to kitty and remove .bak

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,7 +11,7 @@ copy_on_select yes
 
 cursor_blink_interval 0
 enable_audio_bell 0
-# background_opacity 0.975
+background_opacity 0.95
 hide_window_decorations yes
 window_padding_width 10
 
