refactor: add popup title and change popup boder color in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,6 +69,7 @@ set-option -g window-status-format "#{window_index}:#{window_name}#{window_flags
 set-option -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
 set-option -g window-status-current-style "fg=#E9E9EA"
 set-option -g window-status-activity-style none
+set-option -g popup-border-style "fg=#848bac bg=default"
 
 #--------------------------------------------------------------------------
 # Key Bindings
@@ -136,7 +137,7 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
 bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "Copied tmux buffer to system clipboard"
 
 # Display in a fzf pop up the active sessions.
-bind C-j display-popup -E tmux-windowizer
+bind C-j popup -T " active-session-switcher " -E tmux-windowizer
 ###### INLINE SCRIPT ######
 # bind C-j new-window -n "session-switcher" "\
 #     tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
@@ -155,5 +156,5 @@ bind C-j display-popup -E tmux-windowizer
 # bind-key -r F new-window -n "session-switcher" tmux-sessionizer
 
 # Use the new display popup to show the sessionizer with the available projects.
-bind-key -r F display-popup -E tmux-sessionizer
+bind-key -r F popup T " project-switcher " -E tmux-sessionizer
 bind-key -r D run-shell "tmux-sessionizer ~/dotfiles"
