fix: typo on project switcher keybind for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -156,5 +156,5 @@ bind C-j popup -T " active-session-switcher " -E tmux-windowizer
 # bind-key -r F new-window -n "session-switcher" tmux-sessionizer
 
 # Use the new display popup to show the sessionizer with the available projects.
-bind-key -r F popup T " project-switcher " -E tmux-sessionizer
+bind-key -r F popup -T " project-switcher " -E tmux-sessionizer
 bind-key -r D run-shell "tmux-sessionizer ~/dotfiles"
