refactor: change tmux prefix

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,10 +79,10 @@ set-option -g popup-border-style "fg=#848bac bg=default"
 # -n means that the bind doesn't use the prefix
 
 # Set the prefix to Ctrl+Space
-set -g prefix C-Space
+set -g prefix C-a
 
 # Send prefix to a nested tmux session by doubling the prefix
-bind C-Space send-prefix
+bind C-a send-prefix
 
 # 'PREFIX r' to reload of the config file
 unbind r
