refactor: improve tmux status line

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,8 +12,9 @@ copy_on_select yes
 cursor_blink_interval 0
 enable_audio_bell 0
 background_opacity 0.95
-hide_window_decorations yes
+# hide_window_decorations yes
 window_padding_width 10
+macos_option_as_alt yes
 
 
 # BEGIN_KITTY_THEME
