--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,16 +60,19 @@ set -s escape-time 1
 #--------------------------------------------------------------------------
 
 # Status line customisation
-set-option -g status-left-length 100
-set-option -g status-right-length 100
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify left
+set-option -g status-left-length 60
+set-option -g status-right-length 90
 set-option -g status-left " #{session_name}  "
-set-option -g status-right "#{pane_title} "
-set-option -g status-style "fg=#7C7D83 bg=default"
-set-option -g window-status-format "#{window_index}:#{window_name}#{window_flags} "
-set-option -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
-set-option -g window-status-current-style "fg=#E9E9EA"
+set-option -g status-right "%H:%M javier "
+set-option -g status-style "fg=#a4a4a4 bg=#1E1E1E"
+set-option -g window-status-format " #{window_index} #{window_name}#{window_flags} "
+set-option -g window-status-current-format " #{window_index} #{window_name}#{window_flags} "
+set-option -g window-status-current-style "fg=#fef2f3 bg=#BB2649"
 set-option -g window-status-activity-style none
-set-option -g popup-border-style "fg=#848bac bg=default"
+set-option -g popup-border-style "fg=#c8c8c8 bg=default"
 
 #--------------------------------------------------------------------------
 # Key Bindings
