--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,10 +67,10 @@ set-option -g status-left-length 60
 set-option -g status-right-length 90
 set-option -g status-left " #{session_name}  "
 set-option -g status-right "%H:%M javier "
-set-option -g status-style "fg=#a4a4a4 bg=#1E1E1E"
+set-option -g status-style "fg=#a4a4a4 bg=#1D1F28"
 set-option -g window-status-format " #{window_index} #{window_name}#{window_flags} "
 set-option -g window-status-current-format " #{window_index} #{window_name}#{window_flags} "
-set-option -g window-status-current-style "fg=#fef2f3 bg=#BB2649"
+set-option -g window-status-current-style "fg=#fef2f3 bg=#9d174d"
 set-option -g window-status-activity-style none
 set-option -g popup-border-style "fg=#c8c8c8 bg=default"
 
