feat: add bind to clear iterm history on tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -161,3 +161,6 @@ bind C-j popup -T " active-session-switcher " -E tmux-windowizer
 # Use the new display popup to show the sessionizer with the available projects.
 bind-key -r F popup -T " project-switcher " -E tmux-sessionizer
 bind-key -r D run-shell "tmux-sessionizer ~/dotfiles"
+
+# Clear iterm history
+bind -n C-k send-keys -R \; send-keys C-l \; clear-history
