--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,7 +67,7 @@ set-option -g status-left-length 60
 set-option -g status-right-length 90
 set-option -g status-left " #{session_name}  "
 set-option -g status-right "%H:%M javier "
-set-option -g status-style "fg=#a4a4a4 bg=#1D1F28"
+set-option -g status-style "fg=#a4a4a4 bg=default"
 set-option -g window-status-format " #{window_index} #{window_name}#{window_flags} "
 set-option -g window-status-current-format " #{window_index} #{window_name}#{window_flags} "
 set-option -g window-status-current-style "fg=#fef2f3 bg=#9d174d"
